# Docu-Watch

./: README.md  package.json  pnpm-lock.yaml
apps/backend/: .env.example  .gitignore  google_ai_implementation.py  main.py  neo4j_indexer.py  package.json  pdf_to_json_converter.py  pyproject.toml
apps/backend/api/routes/: auth.py  chat.py  document_analysis.py  envelopes.py  webhook.py
apps/backend/app/: config.py
apps/backend/app/routes/: auth.py
apps/backend/app/services/: docusign.py
apps/backend/core/: config.py  oauth2.py  settings.py
apps/backend/processors/: document.py
apps/backend/prompts/: contract_extraction_prompt.txt
apps/backend/schemas/: __init__.py  agreement.py  chat.py  document.py  documents.py  envelope.py  envelopes.py  webhook.py
apps/backend/services/: auth.py  documents.py  docusign.py  envelope.py
apps/backend/services/ai/: __init__.py
apps/backend/services/ai/llm/: pdf_to_json_converter.py
apps/backend/services/ai/neo4j/: neo4j_indexer.py
apps/backend/services/ai/orchestration/: chat_kernel.py  contract_plugin.py  contract_service.py
apps/backend/services/document/: __init__.py  downloader.py  stream.py
apps/backend/services/docusign/: __init__.py  auth.py  envelope.py
apps/backend/services/notification/: webhook.py
apps/backend/services/processors/: doc1.py
apps/backend/services/tracking/: __init__.py  batch_progress.py  progress.py
apps/backend/utils/: __init__.py  file.py  formatters.py
apps/frontend/: .prettierrc  package.json  tailwind.config.ts
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/components/: ChatInterface .tsx  ContractAnalysis.tsx  ContractContent.tsx  ContractsList.tsx  CopyButton.tsx  DocumentDownload.tsx  LoginButton.tsx  ProcessingModal.tsx  UserProfile .tsx
apps/frontend/src/context/: AuthContext.tsx
apps/frontend/src/types/: contracts.ts  webhook.ts
(+7 files in other folders)
